src/components/item/item.module.css
.div
{
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: left;
  column-gap: 10px;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.a p,
.a h3,
.a h5
{
  margin-top: 0px;
  margin-bottom: 0px;
}

.arrowBefore,
.arrowAfter
{
  margin-top: 0px;
  margin-bottom: 0px;
}

.arrowBefore::before
{
  content: '←';
  margin-right: 0.25rem;
  display: inline-block;
  transition: transform 0.3s ease;
  transform-origin: right;
}

.arrowBefore:hover:before
{
  transform: scaleX(1.3);
}

.arrowAfter:after
{
  content: '→';
  margin-left: 0.25rem;
  display: inline-block;
  transition: transform 0.3s ease;
  transform-origin: left;
}

.arrowAfter:hover:after
{
  transform: scaleX(1.3);
}

